--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DataBase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DataBaseName": "GonToDoDataBase",
+    "AccountCollectionName": "AccountCollection"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
