--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "DataBase": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionUrl": "mongodb://localhost:27017",
     "DataBaseName": "GonToDoDataBase",
     "AccountCollectionName": "AccountCollection"
   },
