--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DataBase": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionUrl": "mongodb+srv://GonToDoUserDataBase:admin1234@gontododatabase.rbv6bzt.mongodb.net/?retryWrites=true&w=majority",
     "DataBaseName": "GonToDoDataBase",
     "AccountCollectionName": "AccountCollection"
   },
