task and category

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,7 +2,9 @@
   "DataBase": {
     "ConnectionUrl": "mongodb://localhost:27017",
     "DataBaseName": "GonToDoDataBase",
-    "AccountCollectionName": "AccountCollection"
+    "AccountCollectionName": "AccountCollection",
+    "CategoryCollectionName": "CategoryCollection",
+    "TaskCollectionName": "TaskCollection"
   },
   "Logging": {
     "LogLevel": {
